--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pytest-pylint = "^0.18.0"
 pytest-mypy = "^0.9.1"
 scriv = {extras = ["toml"], version = "^0.16.0"}
 pre-commit = "^2.20.0"
+pytest-asyncio = "^0.19.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
