--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ pytest-mypy = "^0.9.1"
 scriv = {extras = ["toml"], version = "^0.16.0"}
 pre-commit = "^2.20.0"
 pytest-asyncio = "^0.19.0"
+sphinx-autodoc-typehints = "^1.19.2"
+sphinx-markdown-builder = "^0.5.5"
+Sphinx = "^5.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
