--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pytest-asyncio = "^0.19.0"
 sphinx-autodoc-typehints = "^1.19.2"
 sphinx-markdown-builder = "^0.5.5"
 Sphinx = "^5.1.1"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
