--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "Pyvalve"
 version = "0.1.0"
-description = "Asyncio python clamd client"
+description = "Asyncio python clamav client"
 authors = ["Bradley Sacks <bradsacks99@gmail.com>"]
 license = "GPL-3.0-only"
 
@@ -26,3 +26,6 @@ pytest-cov = "^3.0.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[package]
+include = ["src/*.py"]
