--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "Pyvalve"
-version = "0.1.2"
+version = "0.1.3"
 description = "Asyncio python clamav client"
 authors = ["Bradley Sacks <bradsacks99@gmail.com>"]
 license = "GPL-3.0-only"
@@ -10,9 +10,9 @@ documentation = "https://github.com/bradsacks99/pyvalve/blob/master/README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-aiopath = "^0.5.12"
 asyncinit = "^0.2.4"
-aiofile = "^3.7.4"
+aiofile = "^3.8.1"
+aiopathlib = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
